# zolo-zcli

./: .gitignore  .pylintrc  AGENT.md  AGENT_MD_ZSHELL_UPDATE.md  AGENT_UPDATE_ZPARSER.md  ANNOUNCEMENT_v1.3.0.md  BifrostClient_Audit_And_Refactoring_Plan.html  COVERAGE_ANALYSIS_LAYER0.md  DECORATOR_FIX_SUMMARY.md  FINAL_TEST_FIX_SUMMARY.md  GIT_COMMIT_MESSAGE.txt  IMPLEMENTATION_SUMMARY_Login_Retry.md  INSTALL.md  LAYER2_REORDER_COMPLETE.md  LAYER2_REORDER_PLAN.md  LICENSE  MANIFEST.in  NAVIGATION_FIX_SUMMARY.md  NAVIGATION_INVESTIGATION.md  OS_GETCWD_FIX_SUMMARY.md  PLAN_UPDATE_MULTI_APP_AND_OAUTH.md  README.md  RELEASE_CHECKLIST.md  TESTING_MODERNIZATION_PROPOSAL.md  TYPE_HINTS_GUIDE.md  UV_INSTALLATION_INSTRUCTIONS.md  UV_SETUP.md  WEEK_1.3_SUMMARY.md  WEEK_1.4_AUDIT.md  WEEK_1.4_SUMMARY.md  WEEK_1.5_SUMMARY.md  WEEK_1.6_COMPLETE.md  WEEK_1.6_PHASE_1_SUMMARY.md  WEEK_1.6_PHASE_2_SUMMARY.md  WEEK_1.6_PHASE_3_SUMMARY.md  WEEK_1.6_PHASE_4_SUMMARY.md  WEEK_2.1_IMPLEMENTATION_SUMMARY.md  WEEK_6_1_1_IMPLEMENTATION_SUMMARY.md  WEEK_6_1_1_SUMMARY.md  WEEK_6_1_2_SUMMARY.md  (+73 more)
zCLI/: .pylintrc  IMPORT_CENTRALIZATION_RULES.md  README.md  __init__.py  main.py  mypy.ini  pyproject.toml  setup.py  uninstall.py  version.py  zCLI.py
zCLI/Documentation/: AI_AGENT_GUIDE.md  BASICS_GUIDE.md  zAuth_GUIDE.md  zBifrost_GUIDE.md  zCLI_GUIDE.md  zComm_GUIDE.md  zConfig_GUIDE.md  zConfig_HIERARCHY.md  zCrumbs_GUIDE.md  zData_GUIDE.md  zDialog_GUIDE.md  zDispatch_GUIDE.md  zDisplay_GUIDE.md  zFunc_GUIDE.md  zInstall_GUIDE.md  zLoader_GUIDE.md  zMigration_GUIDE.md  zNavigation_GUIDE.md  zOpen_GUIDE.md  zParser_GUIDE.md  zPhilosophy.md  zServer_GUIDE.md  zServer_zFunc_Routes_GUIDE.md  zShell_GUIDE.md  zUtils_GUIDE.md  zWalker_GUIDE.md  zWizard_GUIDE.md
zCLI/Documentation/docs/: ZMIGRATION_GUIDE.md
zCLI/L1_Foundation/a_zConfig/: zConfig.py
zCLI/L1_Foundation/b_zComm/: __init__.py  zComm.py
zCLI/L2_Core/c_zDisplay/: __init__.py  zDisplay.py
zCLI/L2_Core/d_zAuth/: __init__.py  zAuth.py
zCLI/L2_Core/e_zDispatch/: zDispatch.py
zCLI/L2_Core/f_zNavigation/: __init__.py  zNavigation.py
zCLI/L2_Core/g_zParser/: zParser.py
zCLI/L2_Core/h_zLoader/: __init__.py  zLoader.py
zCLI/L2_Core/j_zDialog/: __init__.py  zDialog.py
zCLI/L2_Core/k_zOpen/: __init__.py  zOpen.py
zCLI/L3_Abstraction/l_zUtils/: AUDIT_COMPLETE.md  zUtils.py
zCLI/L3_Abstraction/m_zWizard/: zWizard.py
zCLI/L3_Abstraction/n_zData/: zData.py
zCLI/L3_Abstraction/o_zBifrost/: zBifrost.py
zCLI/L3_Abstraction/p_zShell/: __init__.py  zShell.py
zCLI/L4_Orchestration/q_zWalker/: zWalker.py
zCLI/L4_Orchestration/r_zServer/: __init__.py  zServer.py
zCLI/Schemas/: zSchema.auth.yaml  zSchema.cache.yaml  zSchema.csv_demo.yaml  zSchema.postgresql_demo.yaml  zSchema.sqlite_demo.yaml
zCLI/UI/: ui.test.yaml  zUI.zShell_help.yaml  zUI.zcli_sys.yaml
zCLI/src/: __init__.py  engine.py  main.py  version.py
zCLI/src/Schemas/: zSchema.auth.yaml  zSchema.zMigration.yaml
zCLI/src/UI/: zUI.zShell_help.yaml  zUI.zcli_sys.yaml
zCLI/src/utils/: __init__.py
zCLI/subsystems/: __init__.py  zAuth.py  zComm.py  zConfig.py  zDialog.py  zDisplay.py  zDisplay_new.py  zExport.py  zFunc.py  zLoader.py  zMigrate.py  zOpen.py  zParser.py  zSchema.py  zSession.py  zShell.py  zSocket.py  zUtils.py  zWizard.py
zCLI/subsystems/crud/: __init__.py  crud_alter.py  crud_create.py  crud_delete.py  crud_handler.py  crud_join.py  crud_read.py  crud_update.py  crud_upsert.py  crud_validator.py  test_validation.py  test_zApps_crud.py
zCLI/subsystems/zAuth/: __init__.py  zAuth.py  zSchema.auth.yaml  zSchema.permissions.yaml  zSchema.sessions.yaml
zCLI/subsystems/zCRUD/: __init__.py  crud_create.py  zCRUD.py
zCLI/subsystems/zComm/: README_REFACTORING.md  __init__.py  zComm.py
zCLI/subsystems/zConfig/: __init__.py  zConfig.py
zCLI/subsystems/zConfig_modules/: __init__.py  config_loader.py  config_paths.py  machine_config.py
zCLI/subsystems/zData/: __init__.py  zData.py
zCLI/subsystems/zDialog/: __init__.py  zDialog.py
zCLI/subsystems/zDialog_modules/: __init__.py  dialog_context.py  dialog_submit.py
zCLI/subsystems/zDispatch/: __init__.py  zDispatch.py
zCLI/subsystems/zDisplay/: __init__.py  zDisplay.py
zCLI/subsystems/zDisplay_modules/: __init__.py  display_colors.py  display_forms.py  display_input.py  display_render.py  display_render.py.fixed  display_schema.py
zCLI/subsystems/zDisplay_new/: __init__.py  zDisplay_new.py
zCLI/subsystems/zExport/: __init__.py
zCLI/subsystems/zFunc/: zFunc.py
zCLI/subsystems/zFunc_modules/: func_args.py  func_resolver.py
zCLI/subsystems/zLoader/: __init__.py  zLoader.py
zCLI/subsystems/zLoader_modules/: __init__.py  cache_orchestrator.py  loaded_cache.py  loader_cache.py  loader_io.py  pinned_cache.py  (+3 more)
zCLI/utils/: README.md  __init__.py  cache_utils.py  colors.py  error_handler.py  logger.py  styled_printer.py  test_plugin.py  uninstall.py  validation.py  zExceptions.py  zTraceback.py
zCLI/walker/: __init__.py  zDispatch.py  zLink.py  zLoader.py  zMenu.py  zWalker.py
zCLI/zCore/: CommandExecutor.py  CommandParser.py  Help.py  Shell.py  __init__.py  main.py  zCLI.py  zCLI_Test.py
zLSP/: INTEGRATION_GUIDE.md  README.md  pyproject.toml
zLSP/examples/: usage.py
zLSP/tests/: test_lsp_manual.py  test_lsp_semantic_tokenizer.py  test_parser.py  test_type_hints.py
zSys/: README.md  __init__.py  bootstrap_logger.py  cache_utils.py  cli_handlers.py  installation_utils.py  logger.py  pyproject.toml  uninstall.py  validation.py  zExceptions.py  zTraceback.py
zSys/cli/: cli_commands.py
zSys/errors/: __init__.py  exceptions.py
zSys/formatting/: __init__.py  colors.py  terminal.py
zSys/install/: detection.py
zSys/logger/: __init__.py  bootstrap.py  config.py  console.py  formats.py
zSys/zSys/: __init__.py  paths.py  version.py
zolo/: LICENSE  __init__.py  completion_provider.py  constants.py  diagnostics_engine.py  hover_provider.py  lsp_types.py  parser.py  pyproject.toml  semantic_tokenizer.py  type_hints.py  zolo_lsp_server.py
zolo/examples/: usage.py
zolo/tests/: __init__.py
(+2030 files in other folders)
