[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zolo-zcli"
dynamic = ["version"]
description = "A full-stack CLI framework powered by declerative zVaFiles, WebSocket server, interactive navigation, and pluggable data backends"
authors = [
    {name = "Gal Nachshon", email = "gal@zolo.media"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: Software Development :: Frameworks",
    "Environment :: Console",
]
keywords = ["cli", "framework", "yaml", "interactive", "shell", "declarative", "configuration", "menu-driven", "plugin-system", "session-management"]
dependencies = [
    "PyYAML>=6.0",
    "websockets>=15.0",
    "requests>=2.32",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
csv = [
    "pandas>=2.0",
]
postgresql = [
    "psycopg2-binary>=2.9",
]
all = [
    "pandas>=2.0",
    "psycopg2-binary>=2.9",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pylint>=2.0",
]

[project.scripts]
zolo = "main:main"

[project.urls]
Homepage = "https://github.com/ZoloAi/zolo-zcli"
Documentation = "https://github.com/ZoloAi/zolo-zcli#readme"
Repository = "https://github.com/ZoloAi/zolo-zcli"
"Bug Tracker" = "https://github.com/ZoloAi/zolo-zcli/issues"

[tool.setuptools.packages.find]
# Configure how setuptools discovers Python packages in this repo
# - where: start searching from the project root directory
# - include: only include packages whose names match these patterns
where = ["."]
include = ["zCLI*", "logger*"]

[tool.setuptools]
# Also ship a single-file module alongside packages
# (this includes main.py at the repo root as a top-level module named "main")
py-modules = ["main"]

[tool.setuptools.dynamic]
# Dynamically read the version string from the attribute
# zCLI/version.py -> __version__ (exported via zCLI.version.__version__)
version = {attr = "zCLI.version.__version__"}
