[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zKernel"
dynamic = ["version"]
description = "A declarative Python kernel that orchestrates 17 subsystems across Terminal and Web contexts"
authors = [
    {name = "Gal Nachshon", email = "gal@zolo.media"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: Software Development :: Frameworks",
    "Environment :: Console",
]
keywords = ["cli", "framework", "yaml", "interactive", "shell", "declarative", "configuration", "menu-driven", "plugin-system", "session-management"]
dependencies = [
    "zolo>=1.0.0",
    "zSys",
    "PyYAML>=6.0",
    "websockets>=15.0",
    "requests>=2.32",
    "platformdirs>=4.0",
    "python-dotenv>=1.0",
    "bcrypt>=4.0",
    "boto3>=1.28.0",
    "pygls>=1.3.0",
]

[project.optional-dependencies]
csv = [
    "pandas>=2.0",
]
postgresql = [
    "psycopg2-binary>=2.9",
]
all = [
    "pandas>=2.0",
    "psycopg2-binary>=2.9",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pylint>=2.0",
]

[project.scripts]
zolo = "zKernel.main:main"
zTests = "zKernel.main:ztests_main"

[project.urls]
Homepage = "https://github.com/ZoloAi/Zolo"
Documentation = "https://github.com/ZoloAi/Zolo#readme"
Repository = "https://github.com/ZoloAi/Zolo"
"Bug Tracker" = "https://github.com/ZoloAi/Zolo/issues"

[tool.setuptools]
# Map src/ directory to be the zKernel package  
package-dir = {"zKernel" = "src"}
packages = ["zKernel"]

[tool.setuptools.package-data]
# Include non-Python files in packages
zTestSuite = [
    "demos/*.yaml",
    "demos/*.py",
    "demos/*.md",
    "*.md",
]
zTestRunner = [
    "*.yaml",
    "*.md",
    "*.sh",
]
zKernel = [
    "subsystems/*/zKernel_modules/*.yaml",
    "utils/*.md",
    "UI/*.yaml",
]

[tool.setuptools.dynamic]
# Dynamically read the version string from the attribute
# version module in src/ (mapped to zKernel package)
version = {attr = "zKernel.version.__version__"}

[tool.uv]
# uv configuration for modern Python package management
# See: https://docs.astral.sh/uv/

# Prefer Python 3.11+ for best performance and features
python-preference = "managed"  # Let uv manage Python installations

[dependency-groups]
# Development dependencies (new uv format)
# Replaces deprecated [tool.uv.dev-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pylint>=2.0",
]

