[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zolo"
version = "1.0.0"
description = "Language Server Protocol implementation for .zolo declarative files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Zolo.ai", email = "hello@zolo.ai"}
]
keywords = ["zolo", "lsp", "language-server", "parser", "yaml", "declarative"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]

dependencies = [
    "pyyaml>=6.0",
    "pygls>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ZoloAi/Zolo/tree/main/zLSP"
Documentation = "https://github.com/ZoloAi/Zolo/tree/main/zLSP#readme"
Repository = "https://github.com/ZoloAi/Zolo"
"Bug Tracker" = "https://github.com/ZoloAi/Zolo/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["zolo*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=zolo --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py38"
